# NekoFiler

./: .gitignore  README.md  icon.pdn  makefile  package-lock.json  package.json  rustfmt.toml  tsconfig.json  vite.config.ts
.github/workflows/: create-release.yml  run-unit-test.yml
AmaterasuFilerSettings/: .gitignore  Copy file path.ps1  Copy to opposite dirctory.ps1  Cut to clopboard.ps1  Delete file.ps1  file_name_color.json5  key_bind.json5  tab_color.json5
AmaterasuFilerSettings/script/: Copy to clopboard.ps1  Create Copy.ps1  Move to opposite dirctory.ps1  New File.ps1  New Folder.ps1  Past from clopboard.ps1  Rename.ps1
scripts/: SetVersion.ps1
src/: AddressBar.tsx  App.tsx  BaseColorSetting.tsx  BaseColorSettingPane.tsx  BookMarkPane.tsx  ColorCodeString.tsx  ColorSelector.tsx  CommandBar.tsx  CommandInfo.tsx  ContextMenu.tsx  ContextMenuSettingPane.tsx  DefaultCommandSettins.tsx  DefaultKeyBindSettings.tsx  FileFilterBar.tsx  FileList.tsx  FileListRowColorSettingPane.tsx  FileNameColorSetting.tsx  KeyBindInfo.tsx  KeyBindSettingPane.tsx  LogMessagePane.tsx  LogMessagePein.tsx  MainModeView.tsx  MainPain.tsx  MainPane.tsx  Matcher.tsx  PaineTabs.tsx  PaneTabs.tsx  ReadWriteSettings.tsx  RustFuncs.tsx  ShellCommandsSettingPane.tsx  TabColorSetting.tsx  TabColorSettingPane.tsx  TabNameSetting.tsx  TabNameSettingPane.tsx  TabsInfo.tsx  ThemeStyle.tsx  Updater.tsx  Utility.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: adjust_addressbar_str.rs  execute_shell_command.rs  get_entries.rs  get_exe_dir.rs  get_latest_version.rs  main.rs  pane_info.rs  resolve_symbolic_link.rs  setting_file.rs  update_filer.rs
src-tauri/src/get_entries/: get_file_icon.rs
src-tauri/src/pane_info/: filter_info.rs  get_file_icon.rs  get_file_list.rs  selections.rs  sort.rs
