[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
license = ""
name = "amaterasu_filer"
repository = ""
rust-version = "1.57"
version = "0.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = {version = "1.1", features = []}

[dependencies]
chrono = "0.4.24"
curl = "0.4.43"
dunce = "1.0.3"
encoding_rs = "0.8.31"
once_cell = {version = "1.17.0"}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tauri = {version = "1.1", features = ["api-all"]}
tempdir = "0.3.7"
uuid = "1.6.1"
winapi = {version = "0.3.9", features = ["timezoneapi","winbase","shellapi"]}
base64 = "0.13.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
