[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "neko_filer"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "neko_filer_lib"

[build-dependencies]
tauri-build = {version = "2", features = [] }

[dependencies]
base64 = "0.13.0"
chrono = "0.4.24"
curl = "0.4.43"
dirs = "6.0.0"
dunce = "1.0.3"
encoding_rs = "0.8.31"
itertools = "0.14.0"
once_cell = {version = "1.17.0"}
regex = "0.1"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tauri = {version = "2", features = [] }
tauri-plugin-shell = "2"
tempdir = "0.3.7"
uuid = {version = "1.6.1", features = ["v4"] }
winapi = {version = "0.3.9", features = ["timezoneapi", "winbase", "shellapi", "commctrl"] }
windows = {version = "0.56.0", features = ["Win32_Storage_FileSystem"] }
